--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "build": "webpack && echo >> build/bundle.js && echo var Crocodile = window.Crocodile; >> build/bundle.js"
+  },
   "devDependencies": {
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.5",
